[package]
name = "role_kicker_bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
fast_log = "1.3"
bigdecimal = "0.2"
rbatis = { version = "2", default-features = false, features = ["tokio1", "postgres"] }
tokio = { version = "1", features = ["full"] }