[package]
name = "role_kicker_bot"
version = "0.1.0"
edition = "2018"

[dependencies]
serenity = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-postgres = "0.7"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.9"
bigdecimal = "0.2"
rbatis = { version = "2", default-features = false, features = ["tokio1", "postgres"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1"
refinery = { version = "0.6", features = ["tokio-postgres"] }
postgres-openssl = "0.5"
openssl = "0.10"

[[bin]]
name = "role_kicker_bot"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/migrate.rs"